<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuizApplication</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="find_oponent1_createGame">How do you want to find</string>
    <string name="find_oponent2_createGame"> your opponent ?</string>
    <string name="facebook">Facebook</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="random">Random</string>
    <string name="back">Back</string>
    <string name="profile_setting">Profile Settings</string>
    <string name="signout">SignOut</string>
    <string name="share_username">Share UserName</string>
    <string name="adv_setting">Advance settings</string>
    <string name="chng_pswd">Change Password</string>
    <string name="create_game">Create Game</string>
    <string name="vs">VS</string>
    <string name="next">Next</string>
    <string name="tournament_ends_in">Tournament ends in :</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Mins</string>
    <string name="seconds">Seconds</string>
    <string name="find_friends">Find Friends</string>
    <string name="question">Question</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="remove_2_answer">Remove 2 Answer</string>
    <string name="spin_again">Spin again</string>
    <string name="none"/>
    <string name="login_or_create_account">Login or Create an account</string>
    <string name="email_address_createAccunt">Email Address :</string>
    <string name="username_createAccunt">User name :</string>
    <string name="login_with_fb">Login  With facebook</string>
    <string name="go">Go</string>
    <string name="find_ur_opponent">Find Your Opponent</string>
    <string name="enter_oppo_userNm">Enter your opponent Username</string>
    <string name="enter_oppo_email">Enter your opponent Email address</string>
    <string name="shop">Shop</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="password">Password :</string>
    <string name="forgot_password">Forgot  Password ?</string>
    <string name="twitter">Twitter</string>
    <string name="message">Message</string>
    <string name="share_with">Share With</string>
    <string name="help">Help</string>
    <string name="contact_us">Contact Us</string>
    <string name="push_notification">Push Notification</string>
    <string name="enable_disable_push_notification">Enable/Disable Push Notification</string>
    <string name="save">Save</string>
    <string name="account_setting">Account Setting</string>
    <string name="about_us">About Us</string>
    <string name="welcome_quizit">Welcome Quiz It!</string>
    <string name="connect_with_fb">Connect With Facebook and get Powerups!</string>
    <string name="facebook_login">Login with Facebook</string>
    <string name="find_fb_friend">Facebook is the fastest way to find your friends!</string>
    <string name="or">OR</string>
    <string name="email_login">Login with Email</string>
    <string name="do_not_have_fb">Dont have a Facebook account?</string>
    <string name="pswd">Password</string>
    <string name="forgot_ur_pswd">Forgot Your Password?</string>
    <string name="seprater">:</string>
    <string name="weekly_highscore">Your weekly high score:</string>
    <string name="coins">Coins</string>
    <string name="new_password">New Password</string>
    <string name="retype_password">ReType Password</string>
    <string name="weekly_scores">Weekly Scores</string>
    <string name="owned">: Owned</string>
    <string name="playing_frnd_list">Playing Friends List</string>
    <string name="fb_frns_list">Facebook Friend List</string>
    <string name="invite">Invite</string>
    <string name="playing">Playing</string>
    <string name="share">Share</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="alert">Alert</string>
    <string name="alert_username">User name does not exists</string>
    <string name="ok">Ok</string>
    <string name="alert_email">Email address does not exists</string>
    <string name="alert_random">No random player is there to play</string>

</resources>