<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bgscreen" >

    <LinearLayout
        android:id="@+id/change_pswd_linear_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bar_bg"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/change_pswd_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:background="@drawable/top_bar_back_button"
            android:onClick="OnClickHandler"
            android:text="@string/back" />

        <ImageView
            android:id="@+id/change_pswd_imgVw_top"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:contentDescription="@string/none"
            android:src="@drawable/quiz_main_logo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/change_pswd_linear_bodyMain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/change_pswd_linear_top"
        android:gravity="center"
        android:orientation="vertical" >

        <com.example.quizapplication.font.TextViewFont
            android:id="@+id/change_pswd_HearderText"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/chng_pswd"
            android:textColor="@android:color/white"
            android:textSize="10pt" />

        <com.example.quizapplication.font.TextViewFont
            android:id="@+id/change_pswd_TVw_newpswd"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:gravity="left"
            android:text="@string/new_password"
            android:textColor="@android:color/white"
            android:textSize="7pt" />

        <com.example.quizapplication.font.EditTextFont
            android:id="@+id/change_pswd_ed_newpswd"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/ed_backgroung"
            android:gravity="center|left"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:textColor="@android:color/black"
            android:textSize="7pt" />

        <com.example.quizapplication.font.TextViewFont
            android:id="@+id/change_pswd_TVw_retypepswd"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:gravity="left"
            android:text="@string/retype_password"
            android:textColor="@android:color/white"
            android:textSize="7pt" />

        <com.example.quizapplication.font.EditTextFont
            android:id="@+id/change_pswd_ed_retypepswd"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/ed_backgroung"
            android:gravity="center|left"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="7pt" />

        <Button
            android:id="@+id/change_pswd_btnsave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/yellow_button"
            android:gravity="center"
            android:onClick="OnClickHandler"
            android:text="@string/save"
            android:textSize="8pt" />
    </LinearLayout>

</RelativeLayout>