<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    >
    
    
     <Button
            android:id="@+id/homeScreen_btn_bottom_creategame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/yellow_button_big"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="7dp"
            android:onClick="OnClickHandler"
            android:text="@string/create_game" />

        <Button
            android:id="@+id/homeScreen_btn_findFrnds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@drawable/yellow_button_big"
            android:gravity="center"
            android:layout_gravity="center"
            android:onClick="OnClickHandler"
            android:text="@string/find_friends" />
        <Button
            android:id="@+id/homeScreen_btn_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:background="@drawable/yellow_button_big"
            android:gravity="center"
            android:layout_gravity="center"
            android:onClick="OnClickHandler"
            android:text="@string/shop" />

</LinearLayout>
