<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#355E3B"
    android:orientation="vertical" >
    
    
   

    <Button
        android:id="@+id/camera_btn_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/yellow_button_big"
        android:gravity="center"
        android:onClick="OnClickHandler"
        android:text="@string/camera"
        android:textStyle="italic" />

    <Button
        android:id="@+id/Camera_btn_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/yellow_button_big"
        android:gravity="center"
        android:onClick="OnClickHandler"
        android:text="@string/gallery"
        android:textStyle="italic" />
     <Button
        android:id="@+id/camera_btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/yellow_button_big"
        android:gravity="center"
        android:onClick="OnClickHandler"
        android:text="@string/cancel"
        android:textStyle="italic" />
</LinearLayout>